# AEGIS

./: .env.dev.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.tools.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  (+9 more)
Info/: architecture.md  phases.md  prd.md  rules.md
apps/rag-monitor/: Dockerfile  README.md  pyproject.toml
apps/rag-monitor/app/: faiss_monitor.py  main.py  monitor.py  monitor_test.py
apps/rag-monitor/app/consumer/: detection_producer.py  kafka_consumer.py
apps/rag-monitor/app/middleware/: tracing.py
apps/redteam/: README.md  cli.py  pyproject.toml
apps/redteam/generators/: base.py  benign.py  data_exfiltration.py  excessive_agency.py  jailbreak.py  prompt_injection.py
apps/redteam/runner/: __init__.py  result_store.py  runner.py  runner_test.py
apps/redteam/testcases/: registry.json  schema.json
apps/scanner/: Dockerfile  README.md  pyproject.toml
apps/scanner/app/: main.py  metrics.py
apps/scanner/app/api/: metrics_route.py  routes.py
apps/scanner/app/consumer/: kafka_consumer.py
apps/scanner/app/ensemble/: scanner.py  scanner_test.py
apps/scanner/app/evaluators/: base.py  behavioral_baseline.py  behavioral_baseline_test.py  data_exfiltration.py  jailbreak.py  prompt_injection.py  prompt_injection_test.py
apps/scanner/app/middleware/: tracing.py
apps/scanner/app/models/: llm_client.py  llm_client_test.py  schemas.py
apps/scanner/tests/: test_consumer.py
docs/: architecture.md  design.md  event-flow.md  getting-started.md  memory.md
infra/: alertmanager.yml  prometheus.yml
tests/: README.md
(+190 files in other folders)
