[project]
name = "aegis-rag-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "confluent-kafka>=2.4",
    "httpx>=0.27",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5"
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio"
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP", "N", "S"]

[tool.mypy]
strict = true

[project.scripts]
aegis-rag-monitor = "app.main:main"

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8.0", "numpy>=1.26"]
