[project]
name = "aegis-redteam"
version = "0.1.0"
description = "AEGIS Red Team Automation"
authors = [{name = "AEGIS Team"}]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.2",
    "jsonschema>=4.22"
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
