[project]
name = "aegis-scanner"
version = "0.1.0"
description = "AEGIS ML Scanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "numpy>=1.26"
]
